[tool.poetry]
name = "yutalk"
version = "0.1.0"
description = ""
authors = ["oksmith <oksmith22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langgraph = "^0.3.25"
langchain = "^0.3.23"
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
